--- a/index.html
+++ b/index.html
@@ -1,162 +1,43 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/home.css">
-</head>
-<body>
-    <div class="home">
-        <div class="logo">
-          바름정비
-        </div>
-        <div class="row">
-            <div class="row-title">
-                <span>내차</span>
-                <span class="pen-icon">
-                </span>
-            </div>
-            <div class="row-contents my-car">
-                <input type="radio" name="pos" id="pos1" checked>
-                <input type="radio" name="pos" id="pos2">
-                <input type="radio" name="pos" id="pos3">
-                <ul class="slide-page">
-                <li>
-                    <div class="car-number-wrapper">
-                        <div class="car-number"><span class="text-bold">아이오닉5</span> 12가 3456</div>
-                    </div>
-                </li> 
-                <li>
-                    <div class="car-number-wrapper">
-                        <div class="car-number"><span class="text-bold">아이오닉5</span> 12가 3456</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="car-number-wrapper">
-                        <div class="car-number"><span class="text-bold">아이오닉5</span> 12가 3456</div>
-                    </div>
-                </li>
-                </ul>
-                <p class="bullet">
-                <label for="pos1">1</label>
-                <label for="pos2">2</label>
-                <label for="pos3">3</label>
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="row-title">
-            <span>내 예약</span>
-            <span class="more-button">더보기 &#62;</span>
-            </div>
-            <div class="row-contents my-reservation">
-            <img>
-            <div class="my-reservation-info">
-                <p class="text-point">바름정비소</p>
-                <p class="text-bold">08월 02일 12시 00분에 방문예정</p>
-                <p class="text-secondary">08월 02일 12시 00분에 접수완료</p>
-            </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="row-title">
-            <span>내 상담</span>
-            <span class="more-button">더보기 &#62;</s>
-            </div>
-            <div class="row-contents my-consulting">
-            <div class="my-consulting-title">
-                <div>
-                <span>스타렉스</span>
-                <span class="text-secondary text-mini">디젤</span>
-                </div>
-                <span class="text-secondary text-mini">08월 02일</span>
-            </div>
-            <div class="my-consulting-text">냉각수에 오일이 섞여 수리를 했는데도 오일이 남아 있어요. 해결방법이 없을까요? 상담문의드립니다.</div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="row-title">
-            <span>바로 정비 
-                <span class="text-normal">오일, 필터 등 소모품 교체</span>
-            </span>
-            <span class="more-button">더보기 &#62;</span>
-            </div>
-            <div class="row-contents slider">
-            <div class="slider-item-wrapper">
-                <div class="slider-item"> 
-                <div class="slider-item-img"><img src="/"/></div>
-                <p>엔진오일세트</p>
-                <p class="text-point">74,000원</p>
-                <p class="sliter-item-des text-mini text-secondary">엔진보호성능이 장점인 장점인</p>
-                </div>
-                <div class="slider-item">
-                <div class="slider-item-img"><img src="/"/></div>
-                <p>엔진오일세트</p>
-                <p class="text-point">74,000원</p>
-                <p class="sliter-item-des text-mini text-secondary">엔진보호성능이 장점인 장점인</p>
-                </div>
-                <div class="slider-item">
-                <div class="slider-item-img"><img src="/"/></div>
-                <p>엔진오일세트</p>
-                <p class="text-point">74,000원</p>
-                <p class="sliter-item-des text-mini text-secondary">엔진보호성능이 장점인 장점인</p>
-                </div>
-            </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="row-title">
-            <span>진단리포트</span>
-            </div>
-            <div class="row-contents report-banner">
-            </div>
-        </div>
-        <div class="row">
-            <div class="row-title">
-            <span>상담정비</span>
-            </div>
-            <div class="row-contents consulting-banner"></div>
-        </div>
-        <div class="row self-banner">
-            <div class="row-title">
-            <span>실시간 자가진단</span>
-            </div>
-            <div class="row-contents"></div>
-        </div>
-        <div class="footer">
-            <div class="company-name">(주) 바름파트너스 대표이사 김영호</div>
-            <div>경기도 하남시 미사동로 40번길 9 바름정비<br/>02-471-0851</div>
-            <ul>
-            <li>평일 : 9:00 ~ 18:00</li>
-            <li>점심시간 : 12:00 ~ 13:00</li>
-            <li>주말 및 공휴일 휴무</li>
-            </ul>
-            <div>2016 Barm Partners Corp.<br/>All right reserved. Made with passion in Seoul</div>
-        </div>  
-        <div class="menu">
-            <div class="menu-item active"> 
-            <div>0</div>
-            <div class="menu-item-text">홈</div>
-            </div>
-            <div class="menu-item"> 
-            <div>1</div>
-            <div class="menu-item-text">바로정비</div>
-            </div>
-            <div class="menu-item"> 
-            <div>2</div>
-            <div class="menu-item-text">진단리포트</div>
-            </div>
-            <div class="menu-item"> 
-            <div>3</div>
-            <div class="menu-item-text">상담정비</div>
-            </div>
-            <div class="menu-item"> 
-            <div>4</div>
-            <div class="menu-item-text">자가진단</div> 
-            </div>
-        </div>
-        <div class="setting-button"></div>
-        </div>
-    </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      a {
+        display: block;
+        font-size: 1.25em;
+        text-decoration: none;
+        color: #222;
+        padding: 16px;
+        border: 1px solid #ccc;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+
+      a + a {
+        margin-top: 1em;
+      }
+    </style>
+  </head>
+  <body>
+    <a href="home.html">
+      <span>홈 페이지</span>
+      <span>&#62;</span>
+    </a>
+    <a href="goods-page.html">
+      <span>상품 상세</span>
+      <span>&#62;</span>
+    </a>
+    <a href="list-page.html">
+      <span>상품 리스트</span>
+      <span>&#62;</span>
+    </a>
+    <a href="menu.html">
+      <span>메뉴</span>
+      <span>&#62;</span>
+    </a>
+  </body>
 </html>
